Fixed lists alignment error (#4376)
The lists layout now uses flex, to make sure that recent activity
is always below and that lists are organized in 1-3 columns depending
on viewport size.

--- a/static/css/page-user.less
+++ b/static/css/page-user.less
@@ -104,6 +104,11 @@ div#subjectsPage{
   }
 }
 
+div#lists{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 #authors{
   div{
     display: flex;
